fix(warning-message): color for dark mode

--- a/src/components/Layout/Warning.module.scss
+++ b/src/components/Layout/Warning.module.scss
@@ -5,11 +5,11 @@
   background-color: var(--color-white);
   display: flex;
   align-items: center;
-  color: black;
+  color: var(--color-black);;
   font-weight: normal;
   font-size: 0.8rem;
   justify-content: space-between;
-  border-bottom: 3px solid var(--color-border);
+  border-bottom: 3px solid var(--color-gray-light);
   padding: 8px 8px;
 
   .message {
